Clean up tracked build and report files, add .gitignore and .gitkeep files, fix CheckOutPage getLast() error